Ajout d'une classe permettant de gérer les JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=tp-java-spring-jwt2
 server.port=8005
 
 # Configuration de la base de données PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/user-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/userjwt
 spring.datasource.username=postgre
-spring.datasource.password=B@nLgU4qz*9?D~3n83
+spring.datasource.password=Azerty1234
 
 # Le dialecte PostgreSQL pour Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
